--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,26 @@
-
-
 :root {
-    --white: #FFFFFF;
-    --gray-300: #DEE2E6;
-    --gray-500: #ADB5BD;
-    --indigo-500: #6610F2;
-    --primary-color: #7749F8;
-    --black: #000000;
+    --White: #FFFFFF;
+    --Gray-300: #DEE2E6;
+    --Gray-500: #ADB5BD;
+    --Gray-600: #6C757D;
+    --Gray-800: #343A40;    
+    --Indigo-500: #6610F2;
+    --Primary-Color: #7749F8;
+    --Primary-Color-Dark : #5227CC;
+    --Black: #000000;
+}
+
+* {
+    font-family: Inter;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    height: 100vh;
+}
+
+#root {
+    height: 100%;
 }
