--- a/src/scenes/loginPage/login.css
+++ b/src/scenes/loginPage/login.css
@@ -1,6 +1,3 @@
-* {
-    font-family: Inter;
-}
 
 .card__container {
     display: flex;
@@ -23,8 +20,7 @@
 }
 
 .forgot__password {
-    color: var(--indigo-500, #6610F2);
-    font-family: Inter;
+    color: var(--Indigo-500, #6610F2);
     font-size: 14px;
     font-style: normal;
     font-weight: 600;
@@ -34,13 +30,12 @@
     padding: 0.5rem 0.75rem;
 }
 
-#button__daftar {
-    background-color: var(--primary-color);
-    border-color: var(--primary-color);
+.card__button #button__daftar {
+    background-color: var(--Primary-Color);
+    border-color: var(--Primary-Color);
     border-radius: 6px;
     padding: 1rem 1.5rem;
-    color: var(--default-white, #FFF);
-    font-family: Inter;
+    color: var(--White, #FFF);
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -48,19 +43,21 @@
 }
 
 #button__daftar:hover {
-    border-color: var(--primary-color);
+    border-color: var(--Primary-Color);
 }
 
+#button__notdaftar:hover {
+    border-color: var(--Primary-Color);  
+}   
+
 #button__notdaftar {
-    border-color: var(--primary-color);
-    border: 1px solid var(--primary-color, #7749F8);
-    background: var(--default-white, #FFF);
+    background-color: var(--White);
+    border-color: var(--Primary-Color);
     border-radius: 6px;
     padding: 1rem 1.5rem;
-    color: var(--indigo-500, #6610F2);
-    font-family: Inter;
+    color: var(--White, #FFF);
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
-    line-height: 18px; /* 112.5% */ 
+    line-height: 18px; 
 }   
