--- a/src/scenes/homePage/home.css
+++ b/src/scenes/homePage/home.css
@@ -136,7 +136,7 @@
   color: #fff;
 
   /* Bold/H1 Heading */
-  font-size: 40px;
+  font-size: 2.5rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -156,7 +156,7 @@
   color: #fff;
 
   /* Bold / H4 Heading */
-  font-size: 24px;
+  font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -167,8 +167,73 @@
   text-align: right;
 
   /* Body/ Base text */
-  font-size: 16px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: 28px; /* 175% */
+}
+
+
+@media only screen and (max-width: 800px) {
+
+  .landing_page__middle {
+    padding: 16px;
+  }
+
+  .card__container__lp {
+    justify-content: space-evenly;
+  }
+
+  .card {
+    width: 6.75rem;
+    height: 10.063rem !important;
+  }
+
+  .card-img {
+    width: 100%;
+    height: 60%;
+    border-bottom-left-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+  }
+
+  .card-body{
+    width: 100%;
+    height: 40%;
+    padding: 2px !important;
+  }
+
+  .card-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
+  }
+
+  .card-bottom {
+    display: none;
+  }
+
+  .card-content h1 {
+    font-size: 10px;
+    margin: 0 auto;
+  }
+
+  .card-content p {
+    display: none;
+  }
+
+  .landing_page__bottom__left h1 {
+    font-size: 1.5rem;
+  }
+
+  .landing_page__bottom__right h1 {
+    font-size: 0.75rem;
+  }
+
+  .landing_page__bottom__right h2 {
+    font-size: 0.5rem;
+  }
+
 }
