--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,52 @@
 :root {
-    --White: #FFFFFF;
-    --Gray-300: #DEE2E6;
-    --Gray-500: #ADB5BD;
-    --Gray-600: #6C757D;
-    --Gray-800: #343A40;    
-    --Indigo-500: #6610F2;
-    --Primary-Color: #7749F8;
-    --Primary-Color-Dark : #5227CC;
-    --Black: #000000;
+  --White: #ffffff;
+  --Gray-300: #dee2e6;
+  --Gray-500: #adb5bd;
+  --Gray-600: #6c757d;
+  --Gray-800: #343a40;
+  --Indigo-500: #6610f2;
+  --Primary-Light:#ebe5fc;
+  --Primary-Color: #7749f8;
+  --Primary-Color-Dark: #5227cc;
+  --Almost-Dark: #1C1D21;
+  --Black: #000000;
 }
 
 * {
-    font-family: Inter;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  font-family: Inter, sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* Untuk di website html nya jadi full height kalau di zoom out */
+
+html {
+  height: 100%; /* or any other value */
 }
 
 body {
-    height: 100vh;
+    height: 100%;
 }
 
 #root {
     height: 100%;
+}
+
+@media only screen and (max-width: 800px) {
+    /* Untuk di android html nya jadi full height */
+    html {
+        height: auto;
+    }
+}
+
+/* Parent Container Admin Pages */
+.content__container__admin {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 32px;
+  flex: 1 0 0;
+  align-self: stretch;
+  background-color: var(--Primary-Light);
 }
