data table dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --Primary-Color: #7749f8;
   --Primary-Color-Dark: #5227cc;
   --Almost-Dark: #1C1D21;
+  --Title: #1C1D21;
   --Black: #000000;
 }
 
