--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,13 @@ body {
   align-self: stretch;
   background-color: var(--Primary-Light);
 }
+
+.children__container__admin {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  padding: 1em;
+  gap: 16px;
+  overflow-y: scroll;
+}
