--- a/src/scenes/admin/homePageAdmin/homePageAdmin.css
+++ b/src/scenes/admin/homePageAdmin/homePageAdmin.css
@@ -1,11 +1,10 @@
-.dashboard__container {
+.dashboard__container__admin {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100vh;
   padding: 1em;
   gap: 16px;
-  overflow-y: scroll;
 }
 
 /* Dashboard Container Top */
@@ -154,7 +153,7 @@ p {
 .dashboard__container__bottom {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  min-height: 50%;
   background-color: #fff;
   border-radius: 10px;
   padding: 2em;
